--- a/create_item.ipynb
+++ b/create_item.ipynb
@@ -154,14 +154,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<LanguageValue @5930a0 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_item.labels.set('en', 'NTTData test item')\n",
     "new_item.labels.set('es', 'Elemento de prueba de NTTData')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "20bf2573-e4bd-4110-b058-b3724c8b5c0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ItemEntity @593d90 _BaseEntity__api=<wikibaseintegrator.wikibaseintegrator.WikibaseIntegrator object at 0x7f2a08593070>\n",
+       "\t _BaseEntity__title=None\n",
+       "\t _BaseEntity__pageid=None\n",
+       "\t _BaseEntity__lastrevid=None\n",
+       "\t _BaseEntity__type='item'\n",
+       "\t _BaseEntity__id=None\n",
+       "\t _BaseEntity__claims=<Claims @593430 _Claims__claims={}>\n",
+       "\t _ItemEntity__labels=<Labels @593ac0 _LanguageValues__values={'en': <LanguageValue @592e00 _LanguageValue__language='en' _LanguageValue__value='NTTData test item' _LanguageValue__removed=False>, 'es': <LanguageValue @5930a0 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>}>\n",
+       "\t _ItemEntity__descriptions=<Descriptions @593d00 _LanguageValues__values={}>\n",
+       "\t _ItemEntity__aliases=<Aliases @5939a0 _Aliases__aliases={}>\n",
+       "\t _ItemEntity__sitelinks=<Sitelinks @593d60 sitelinks={}>>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e634142-763e-49bd-af70-f74130531a59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
