--- a/create_item.ipynb
+++ b/create_item.ipynb
@@ -154,6 +154,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "075f26ad-578b-4ee3-b933-2822b3bf5bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m\n",
+       "\u001b[0mnew_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mlanguage\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0maction_if_exists\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'ActionIfExists'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mActionIfExists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mREPLACE_ALL\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'Optional[LanguageValue]'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Create or update the specified language with the valued passed in arguments.\n",
+       "\n",
+       ":param language: The desired language.\n",
+       ":param value: The desired value of the LanguageValue object. Use None to delete an existing LanguageValue object from the list.\n",
+       ":param action_if_exists: The action if the LanguageValue object is already defined. Can be ActionIfExists.REPLACE_ALL (default) or ActionIfExists.KEEP.\n",
+       ":return: The created or updated LanguageValue. None if there's no LanguageValue object with this language.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/models/language_values.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_item.labels.set?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
