--- a/create_item.ipynb
+++ b/create_item.ipynb
@@ -154,40 +154,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "075f26ad-578b-4ee3-b933-2822b3bf5bca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mnew_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mlanguage\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0maction_if_exists\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'ActionIfExists'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mActionIfExists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mREPLACE_ALL\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'Optional[LanguageValue]'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Create or update the specified language with the valued passed in arguments.\n",
-       "\n",
-       ":param language: The desired language.\n",
-       ":param value: The desired value of the LanguageValue object. Use None to delete an existing LanguageValue object from the list.\n",
-       ":param action_if_exists: The action if the LanguageValue object is already defined. Can be ActionIfExists.REPLACE_ALL (default) or ActionIfExists.KEEP.\n",
-       ":return: The created or updated LanguageValue. None if there's no LanguageValue object with this language.\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/models/language_values.py\n",
-       "\u001b[0;31mType:\u001b[0m      method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "new_item.labels.set?"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
@@ -210,39 +176,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "20bf2573-e4bd-4110-b058-b3724c8b5c0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ItemEntity @593d90 _BaseEntity__api=<wikibaseintegrator.wikibaseintegrator.WikibaseIntegrator object at 0x7f2a08593070>\n",
-       "\t _BaseEntity__title=None\n",
-       "\t _BaseEntity__pageid=None\n",
-       "\t _BaseEntity__lastrevid=None\n",
-       "\t _BaseEntity__type='item'\n",
-       "\t _BaseEntity__id=None\n",
-       "\t _BaseEntity__claims=<Claims @593430 _Claims__claims={}>\n",
-       "\t _ItemEntity__labels=<Labels @593ac0 _LanguageValues__values={'en': <LanguageValue @592e00 _LanguageValue__language='en' _LanguageValue__value='NTTData test item' _LanguageValue__removed=False>, 'es': <LanguageValue @5930a0 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>}>\n",
-       "\t _ItemEntity__descriptions=<Descriptions @593d00 _LanguageValues__values={}>\n",
-       "\t _ItemEntity__aliases=<Aliases @5939a0 _Aliases__aliases={}>\n",
-       "\t _ItemEntity__sitelinks=<Sitelinks @593d60 sitelinks={}>>"
+       "<Aliases @5939a0 _Aliases__aliases={'en': [<Alias @593cd0 _LanguageValue__language='en' _LanguageValue__value='Item' _LanguageValue__removed=False>], 'es': [<Alias @5938e0 _LanguageValue__language='es' _LanguageValue__value='Ítem' _LanguageValue__removed=False>]}>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_item"
+    "new_item.aliases.set('en', 'Item')\n",
+    "new_item.aliases.set('es', 'Ítem')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7e634142-763e-49bd-af70-f74130531a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<LanguageValue @592f20 _LanguageValue__language='es' _LanguageValue__value='Un elemento recién creado' _LanguageValue__removed=False>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_item.descriptions.set('en', 'A freshly created element')\n",
+    "new_item.descriptions.set('es', 'Un elemento recién creado')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e634142-763e-49bd-af70-f74130531a59",
+   "id": "3463ee7e-4907-4998-8e1d-9c3d82fb5ab5",
    "metadata": {},
    "outputs": [],
    "source": []
