--- a/create_item.ipynb
+++ b/create_item.ipynb
@@ -220,8 +220,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3463ee7e-4907-4998-8e1d-9c3d82fb5ab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ItemEntity @593d90 _BaseEntity__api=<wikibaseintegrator.wikibaseintegrator.WikibaseIntegrator object at 0x7f2a08593070>\n",
+       "\t _BaseEntity__title=None\n",
+       "\t _BaseEntity__pageid=None\n",
+       "\t _BaseEntity__lastrevid=3\n",
+       "\t _BaseEntity__type='item'\n",
+       "\t _BaseEntity__id='Q3'\n",
+       "\t _BaseEntity__claims=<Claims @847ac0 _Claims__claims={}>\n",
+       "\t _ItemEntity__labels=<Labels @8447f0 _LanguageValues__values={'en': <LanguageValue @8454e0 _LanguageValue__language='en' _LanguageValue__value='NTTData test item' _LanguageValue__removed=False>, 'es': <LanguageValue @9c7370 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>}>\n",
+       "\t _ItemEntity__descriptions=<Descriptions @9c7070 _LanguageValues__values={'en': <LanguageValue @9c6e00 _LanguageValue__language='en' _LanguageValue__value='A freshly created element' _LanguageValue__removed=False>, 'es': <LanguageValue @593d30 _LanguageValue__language='es' _LanguageValue__value='Un elemento recién creado' _LanguageValue__removed=False>}>\n",
+       "\t _ItemEntity__aliases=<Aliases @593d00 _Aliases__aliases={'en': [<Alias @593790 _LanguageValue__language='en' _LanguageValue__value='Item' _LanguageValue__removed=False>], 'es': [<Alias @593be0 _LanguageValue__language='es' _LanguageValue__value='Ítem' _LanguageValue__removed=False>]}>\n",
+       "\t _ItemEntity__sitelinks=<Sitelinks @593c10 sitelinks={}>>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_item.write()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "010c9f77-ebe4-4c0c-84cb-fd3a2bee8311",
    "metadata": {},
    "outputs": [],
    "source": []
