--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -84,8 +84,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3 = wbi.item.get('Q3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "38b2fd95-6082-446f-bb64-a3cf06c203c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ItemEntity @bbc3a0 _BaseEntity__api=<wikibaseintegrator.wikibaseintegrator.WikibaseIntegrator object at 0x7f4989bfdbd0>\n",
+       "\t _BaseEntity__title='Item:Q3'\n",
+       "\t _BaseEntity__pageid=3\n",
+       "\t _BaseEntity__lastrevid=5\n",
+       "\t _BaseEntity__type='item'\n",
+       "\t _BaseEntity__id='Q3'\n",
+       "\t _BaseEntity__claims=<Claims @bffb20 _Claims__claims={'P1': [<String @64b9a0 _Claim__mainsnak=<Snak @698520 _Snak__snaktype=<WikibaseSnakType.KNOWN_VALUE: 'value'> _Snak__property_number='P1' _Snak__hash='da1baa775ace78395b6ce74a3d1c247139f6f0cc' _Snak__datavalue={'value': 'Test', 'type': 'string'} _Snak__datatype='string'> _Claim__type='statement' _Claim__qualifiers=<Qualifiers @698460 _Qualifiers__qualifiers={}> _Claim__qualifiers_order=[] _Claim__id='Q3$b47826b9-453b-a8ec-807e-878f9eaf95ac' _Claim__rank=<WikibaseRank.NORMAL: 'normal'> _Claim__removed=False _Claim__references=<References @698310 _References__references=[]>>]}>\n",
+       "\t _ItemEntity__labels=<Labels @b7ff10 _LanguageValues__values={'en': <LanguageValue @bfd270 _LanguageValue__language='en' _LanguageValue__value='NTTData test item' _LanguageValue__removed=False>, 'es': <LanguageValue @64b970 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>}>\n",
+       "\t _ItemEntity__descriptions=<Descriptions @bffb80 _LanguageValues__values={'en': <LanguageValue @698280 _LanguageValue__language='en' _LanguageValue__value='A freshly created element' _LanguageValue__removed=False>, 'es': <LanguageValue @698100 _LanguageValue__language='es' _LanguageValue__value='Un elemento recién creado' _LanguageValue__removed=False>}>\n",
+       "\t _ItemEntity__aliases=<Aliases @bfcca0 _Aliases__aliases={'en': [<Alias @6986d0 _LanguageValue__language='en' _LanguageValue__value='Item' _LanguageValue__removed=False>], 'es': [<Alias @6983a0 _LanguageValue__language='es' _LanguageValue__value='Ítem' _LanguageValue__removed=False>]}>\n",
+       "\t _ItemEntity__sitelinks=<Sitelinks @bfff40 sitelinks={}>>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7259a028-22cd-4ea7-8ffa-7c1096d5fc11",
    "metadata": {},
    "outputs": [],
    "source": []
