--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -94,33 +94,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "id": "3224466a-13ef-489c-9674-fe44e89a40cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NTTData test item'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q3.labels.get('en').value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f06155-cb38-4c3a-a6c4-d2b3d1579d78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3.claims.get('"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "38b2fd95-6082-446f-bb64-a3cf06c203c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ItemEntity @bbc3a0 _BaseEntity__api=<wikibaseintegrator.wikibaseintegrator.WikibaseIntegrator object at 0x7f4989bfdbd0>\n",
-       "\t _BaseEntity__title='Item:Q3'\n",
-       "\t _BaseEntity__pageid=3\n",
-       "\t _BaseEntity__lastrevid=5\n",
-       "\t _BaseEntity__type='item'\n",
-       "\t _BaseEntity__id='Q3'\n",
-       "\t _BaseEntity__claims=<Claims @bffb20 _Claims__claims={'P1': [<String @64b9a0 _Claim__mainsnak=<Snak @698520 _Snak__snaktype=<WikibaseSnakType.KNOWN_VALUE: 'value'> _Snak__property_number='P1' _Snak__hash='da1baa775ace78395b6ce74a3d1c247139f6f0cc' _Snak__datavalue={'value': 'Test', 'type': 'string'} _Snak__datatype='string'> _Claim__type='statement' _Claim__qualifiers=<Qualifiers @698460 _Qualifiers__qualifiers={}> _Claim__qualifiers_order=[] _Claim__id='Q3$b47826b9-453b-a8ec-807e-878f9eaf95ac' _Claim__rank=<WikibaseRank.NORMAL: 'normal'> _Claim__removed=False _Claim__references=<References @698310 _References__references=[]>>]}>\n",
-       "\t _ItemEntity__labels=<Labels @b7ff10 _LanguageValues__values={'en': <LanguageValue @bfd270 _LanguageValue__language='en' _LanguageValue__value='NTTData test item' _LanguageValue__removed=False>, 'es': <LanguageValue @64b970 _LanguageValue__language='es' _LanguageValue__value='Elemento de prueba de NTTData' _LanguageValue__removed=False>}>\n",
-       "\t _ItemEntity__descriptions=<Descriptions @bffb80 _LanguageValues__values={'en': <LanguageValue @698280 _LanguageValue__language='en' _LanguageValue__value='A freshly created element' _LanguageValue__removed=False>, 'es': <LanguageValue @698100 _LanguageValue__language='es' _LanguageValue__value='Un elemento recién creado' _LanguageValue__removed=False>}>\n",
-       "\t _ItemEntity__aliases=<Aliases @bfcca0 _Aliases__aliases={'en': [<Alias @6986d0 _LanguageValue__language='en' _LanguageValue__value='Item' _LanguageValue__removed=False>], 'es': [<Alias @6983a0 _LanguageValue__language='es' _LanguageValue__value='Ítem' _LanguageValue__removed=False>]}>\n",
-       "\t _ItemEntity__sitelinks=<Sitelinks @bfff40 sitelinks={}>>"
+       "['ETYPE',\n",
+       " '_BaseEntity__api',\n",
+       " '_BaseEntity__claims',\n",
+       " '_BaseEntity__id',\n",
+       " '_BaseEntity__lastrevid',\n",
+       " '_BaseEntity__pageid',\n",
+       " '_BaseEntity__title',\n",
+       " '_BaseEntity__type',\n",
+       " '_ItemEntity__aliases',\n",
+       " '_ItemEntity__descriptions',\n",
+       " '_ItemEntity__labels',\n",
+       " '_ItemEntity__sitelinks',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_get',\n",
+       " '_write',\n",
+       " 'add_claims',\n",
+       " 'aliases',\n",
+       " 'api',\n",
+       " 'claims',\n",
+       " 'clear',\n",
+       " 'delete',\n",
+       " 'descriptions',\n",
+       " 'from_json',\n",
+       " 'get',\n",
+       " 'get_json',\n",
+       " 'id',\n",
+       " 'labels',\n",
+       " 'lastrevid',\n",
+       " 'new',\n",
+       " 'pageid',\n",
+       " 'sitelinks',\n",
+       " 'title',\n",
+       " 'type',\n",
+       " 'write',\n",
+       " 'write_required']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q3"
+    "dir(q3)"
    ]
   },
   {
