--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -115,12 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "01f06155-cb38-4c3a-a6c4-d2b3d1579d78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'value': 'Test', 'type': 'string'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "q3.claims.get('"
+    "q3.claims.get('P1')[0].mainsnak.datavalue"
    ]
   },
   {
