Work in progress

--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -115,23 +115,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "01f06155-cb38-4c3a-a6c4-d2b3d1579d78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'value': 'Test', 'type': 'string'}"
+       "'Test'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q3.claims.get('P1')[0].mainsnak.datavalue"
+    "q3.claims.get('P1')[0].mainsnak.datavalue['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0f850b9f-7f2b-4eaf-a805-9b4d82d21451",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['P1'])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q3.claims.claims.keys()"
    ]
   },
   {
