--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -136,80 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "0f850b9f-7f2b-4eaf-a805-9b4d82d21451",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DTYPE',\n",
-       " '_Claim__id',\n",
-       " '_Claim__mainsnak',\n",
-       " '_Claim__qualifiers',\n",
-       " '_Claim__qualifiers_order',\n",
-       " '_Claim__rank',\n",
-       " '_Claim__references',\n",
-       " '_Claim__removed',\n",
-       " '_Claim__type',\n",
-       " '__annotations__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " 'equals',\n",
-       " 'from_json',\n",
-       " 'get_json',\n",
-       " 'get_sparql_value',\n",
-       " 'has_equal_qualifiers',\n",
-       " 'id',\n",
-       " 'mainsnak',\n",
-       " 'parse_sparql_value',\n",
-       " 'qualifiers',\n",
-       " 'qualifiers_order',\n",
-       " 'rank',\n",
-       " 'references',\n",
-       " 'refs_equal',\n",
-       " 'remove',\n",
-       " 'removed',\n",
-       " 'set_value',\n",
-       " 'sparql_query',\n",
-       " 'subclasses',\n",
-       " 'type',\n",
-       " 'update']"
+       "{'P1': [{'mainsnak': {'snaktype': 'value',\n",
+       "    'property': 'P1',\n",
+       "    'datatype': 'string',\n",
+       "    'datavalue': {'value': 'Test', 'type': 'string'}},\n",
+       "   'type': 'statement',\n",
+       "   'id': 'Q3$b47826b9-453b-a8ec-807e-878f9eaf95ac',\n",
+       "   'rank': 'normal'}]}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# dir(q3.claims.claims)\n",
-    "dir(q3.claims.get('P1')[0])"
+    "dir(q3.claims.get('P1')[0])\n",
+    "q3.claims.get_json()"
    ]
   },
   {
