--- a/notebooks/get_item.ipynb
+++ b/notebooks/get_item.ipynb
@@ -164,91 +164,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "id": "38b2fd95-6082-446f-bb64-a3cf06c203c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = wbi.property.get('P1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7259a028-22cd-4ea7-8ffa-7c1096d5fc11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ETYPE',\n",
-       " '_BaseEntity__api',\n",
-       " '_BaseEntity__claims',\n",
-       " '_BaseEntity__id',\n",
-       " '_BaseEntity__lastrevid',\n",
-       " '_BaseEntity__pageid',\n",
-       " '_BaseEntity__title',\n",
-       " '_BaseEntity__type',\n",
-       " '_ItemEntity__aliases',\n",
-       " '_ItemEntity__descriptions',\n",
-       " '_ItemEntity__labels',\n",
-       " '_ItemEntity__sitelinks',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_get',\n",
-       " '_write',\n",
-       " 'add_claims',\n",
-       " 'aliases',\n",
-       " 'api',\n",
-       " 'claims',\n",
-       " 'clear',\n",
-       " 'delete',\n",
-       " 'descriptions',\n",
-       " 'from_json',\n",
-       " 'get',\n",
-       " 'get_json',\n",
-       " 'id',\n",
-       " 'labels',\n",
-       " 'lastrevid',\n",
-       " 'new',\n",
-       " 'pageid',\n",
-       " 'sitelinks',\n",
-       " 'title',\n",
-       " 'type',\n",
-       " 'write',\n",
-       " 'write_required']"
+       "'part of test'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(q3)"
+    "p1.labels.get('en').value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "76115dc6-3e9d-4aee-964f-c2087143d079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'labels': {'en': {'language': 'en', 'value': 'part of test'}},\n",
+       " 'descriptions': {'en': {'language': 'en', 'value': 'Test property'}},\n",
+       " 'aliases': {'en': [{'language': 'en', 'value': 'testing property'}]},\n",
+       " 'type': 'property',\n",
+       " 'claims': {},\n",
+       " 'id': 'P1',\n",
+       " 'datatype': 'string'}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1.get_json()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7259a028-22cd-4ea7-8ffa-7c1096d5fc11",
+   "id": "254c3078-a8fe-464c-b272-02d28ea35fdc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p1 = wbi.property.get('P1')\n",
+    "p1.get_json()"
+   ]
   }
  ],
  "metadata": {
