--- a/notebooks/create_prop.ipynb
+++ b/notebooks/create_prop.ipynb
@@ -84,13 +84,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wbi.property.set("
+    "p = wbi.property.new()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ab519f4-a59d-41b1-a6d7-8398b27ccc26",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'LanguageValue' object has no attribute 'write'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlabels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43men\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNew prop\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'LanguageValue' object has no attribute 'write'"
+     ]
+    }
+   ],
+   "source": [
+    "p.labels.set('en', 'New prop')\n",
+    "\n",
+    "p.write()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc94ee45-a3fa-4eef-9955-13841aa17636",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
