--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -11,7 +11,9 @@
     "from wikibaseintegrator import WikibaseIntegrator\n",
     "from wikibaseintegrator import wbi_login\n",
     "from wikibaseintegrator import datatypes\n",
-    "from wikibaseintegrator.wbi_config import config as wbi_config"
+    "from wikibaseintegrator.wbi_config import config as wbi_config\n",
+    "from os.path import join, isfile, exists, isdir, abspath, pardir\n",
+    "from os import listdir"
    ]
   },
   {
@@ -51,6 +53,14 @@
     "WDUSER, WDPASS = \"Admin\", \"90J8XXXaO4Sr9^^Z\"\n",
     "# WDUSER, WDPASS = \"Mohammadzainabbas\", \"fHh!%shFa6^h\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3779edb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
