--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3779edb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_data = join()  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "094b17a2-212a-43c4-bcf2-9b21f05a5d0f",
    "metadata": {},
@@ -53,14 +63,6 @@
    "source": [
     "setup_config()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3779edb8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
