Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -13,7 +13,7 @@
     "from wikibaseintegrator import datatypes\n",
     "from wikibaseintegrator.wbi_config import config as wbi_config\n",
     "from os.path import join, isfile, exists, isdir, abspath, pardir\n",
-    "from os import listdir"
+    "from os import listdir, getcwd"
    ]
   },
   {
@@ -35,7 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_data = join()  "
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, \"data\")"
    ]
   },
   {
