--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9ef43b03-7605-465e-90b6-e02d86f56edb",
    "metadata": {},
    "outputs": [],
@@ -30,13 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e08aa95f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/root/data'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dir"
    ]
   },
   {
