--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -30,28 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
-    "data_dir = join(parent_dir, \"data\")"
+    "data_dir = join(parent_dir, \"data\")\n",
+    "team_data = join(data_dir, \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e08aa95f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/root/data'"
+       "'/root/wikibase-nttdata/data'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
