--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -30,35 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, \"data\")\n",
-    "team_data = join(data_dir, \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e08aa95f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/root/wikibase-nttdata/data'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_dir"
+    "team_data = join(data_dir, \"BDMA_Team_v1.csv\")\n",
+    "project_data = join(data_dir, \"BDMA_Projects_v1.csv\")"
    ]
   },
   {
