--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -103,7 +103,10 @@
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.from_csv(team_data)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
